Fixed a double quote problem in an href link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="text">
                 <h1>This is my landing page</h1>
                 This website has a subtext that goes here under the main title.
-                <br><a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' target="_blank"><button>Sign Up</button></a>
+                <br><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><button>Sign Up</button></a>
             </div>
             <div class="image">
                 placeholder for image
